--- a/MusicSchool/_assets/scss/object/project/_plan.scss
+++ b/MusicSchool/_assets/scss/object/project/_plan.scss
@@ -34,6 +34,9 @@
 }
 #monthly-plan{
     padding-bottom: 190px;
+    @include mq(){
+        padding-bottom: 221px;
+    }
 }
 .plan__title{
     text-align: center;
@@ -86,7 +89,7 @@
       padding:0 50px;
     }
     @include mq(){
-        margin-top: 60px;
+        margin-top: 46px;
     }
     @include mq(lg){
         overflow: visible;
@@ -102,10 +105,17 @@
                     height: auto;
                     text-align: center;
                     vertical-align: middle;
-                    padding: 10px 0;
+                    padding: {
+                        top: 10px;
+                        bottom: 10px;
+                    }
                     @include mq(){
                         width: 220px;
-                        height: 50px;
+                        height: 40px;
+                        padding: {
+                            top: 10px;
+                            bottom: 10px;
+                        }
                     }
                 }
             }
@@ -125,6 +135,10 @@
                     border: {
                         top: 0.5px solid #000;
                         bottom: 0.5px solid #000;
+                    }
+                    @include mq(){
+                        padding-left: 17px;
+                        letter-spacing: 0.05em;
                     }
                 }
                 td{
@@ -152,6 +166,14 @@
     font-weight: bold;
     span{
         @include l_height(17,25);
+        @include mq(){
+            @include l_height(17,33);
+            padding: {
+                top: 5px;
+                bottom: 5px;
+            }
+            // height: 30px;
+        }
         display: block;
     }
 }
@@ -177,6 +199,7 @@
     margin-top: 11px;
     @include l_height(16,30);
     @include mq(){
-        margin-top: 33px;
+        margin-top: 8px;
+        letter-spacing: 0.06em;
     }
 }
