--- a/MusicSchool/_assets/scss/object/component/_card.scss
+++ b/MusicSchool/_assets/scss/object/component/_card.scss
@@ -27,6 +27,7 @@
         width: 100%;
         height: auto;
         object-fit: cover;
+        object-position: 50% 50%;
     }
     &__title{
         font-weight: bold;
