--- a/MusicSchool/_assets/scss/object/project/_blog.scss
+++ b/MusicSchool/_assets/scss/object/project/_blog.scss
@@ -79,7 +79,7 @@
     padding-bottom: 196px;
     @include mq(lg){
         padding-top: 61px;
-        padding-bottom: 50px;
+        padding-bottom: 208px;
     }
 }
 .blog__fv-img{
@@ -119,6 +119,9 @@
     margin-top: 42px;
     @include mq(lg){
         margin-top: 40px;
+        &:not(:first-of-type){
+            margin-top: 70px;
+        }
     }
     &__label{
         width: 90px;
@@ -137,14 +140,14 @@
         }
     }
     &__img{
-        min-height: 200px;
+        width: 335px;
         height: 200px;
         @include mq(sm){
             height: auto;
         }
         @include mq(md){
+           width: 260px;
            height: 184px;
-           min-height: 184px;
         }
     }
     &__date{
@@ -167,7 +170,7 @@
     }
 }
 .blog-list__pagination{
-    margin-top: 70px;
+    margin-top: 71px;
     &__inner{
         column-gap: 10px;
     }
@@ -194,8 +197,8 @@
         padding: {
             top: 16px;
             bottom: 16px;
-            right: 20px;
-            left: 20px;
+            right: 6px;
+            left: 6px;
         }
     }
 }
