fix blog-list, blog-details, notice-list, notice-details

--- a/MusicSchool/_assets/scss/object/component/_nav.scss
+++ b/MusicSchool/_assets/scss/object/component/_nav.scss
@@ -15,7 +15,7 @@
     width:100%;
 }
 .c-sns-inner{
-    @include flex();
+    @include flex(center);
     @include mq(){
         @include flex(start);
         column-gap: 3.4px;
