--- a/MusicSchool/_assets/scss/object/project/_contact.scss
+++ b/MusicSchool/_assets/scss/object/project/_contact.scss
@@ -69,8 +69,8 @@
 .contact-form__field--check{
     @include flex(start,flex-start);
     flex-direction: column;
-    row-gap: 4px;
-    margin-top: 10px;
+    row-gap: 0;
+    margin-top: 2px;
     @include mq(){
         flex-direction: row;
         row-gap: 0;
@@ -82,7 +82,7 @@
     @include flex(start,flex-start);
     flex-direction: column;
     row-gap: 4px;
-    margin-top: 10px;
+    margin-top: 3px;
     @include mq(){
         flex-direction: row;
         row-gap: 0;
@@ -112,7 +112,7 @@
 .contact-form__checkbox-field{
     @include flex();
     &:not(:first-of-type){
-        margin-top: 6.5px;
+        margin-top: 9.5px;
         @include mq(){
             margin-top: 9.5px;   
         }
@@ -152,7 +152,10 @@
     }
 }
 .contact-form__remark-textarea{
-    margin-top: 6px;
+    margin-top: -1px;
+    @include mq(){
+        margin-top: 6px;
+    }
 }
 // 送信完了
 #contact-send{
