--- a/MusicSchool/_assets/scss/object/project/_result.scss
+++ b/MusicSchool/_assets/scss/object/project/_result.scss
@@ -40,7 +40,7 @@
     @include mq(){
         margin-top: 40px;
         display: grid;
-        row-gap: 68px;
+        row-gap: 67px;
         column-gap: 106px;
         grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     }
@@ -81,9 +81,20 @@
     }
 }
 .result-list__card__img{
-    width: 335px;
-    height: 236px;
-    @include mq(){
+    width: 100%;
+    min-height: 236px;
+    @include mq(lg){
+        width: 387px;
+        height: 273px;
+    }
+}
+.result-list__card__img__adjust{
+    width: 100%;
+    height: 220px;
+    @include mq(sm){
+        height: auto;
+    }
+    @include mq(lg){
         width: 387px;
         height: 273px;
     }
@@ -91,7 +102,7 @@
 .result-list__pagination{
     margin-top: 61px;
     @include mq(){
-        margin-top: 60px;
+        margin-top: 65px;
     }
     &__inner{
         column-gap: 10px;
