fix button animation

--- a/MusicSchool/_assets/scss/object/component/_button.scss
+++ b/MusicSchool/_assets/scss/object/component/_button.scss
@@ -8,6 +8,11 @@
 .c-button--red {
   background-color: v.$red;
   color: #fff;
+  transition: .5s;
+  &:hover{
+    background-color: #fff;
+    color: v.$red;
+  }
 }
 .c-button--small{
   width: 150px;
