--- a/MusicSchool/_assets/scss/object/project/_blog.scss
+++ b/MusicSchool/_assets/scss/object/project/_blog.scss
@@ -41,7 +41,10 @@
     }
     &__img{
         height: 200px;
-        @include mq(md){
+        @include mq(sm){
+            height: auto;
+        }
+        @include mq(lg){
            max-height: 350px;
         }
     }
