fix plan table horizon border

--- a/MusicSchool/_assets/scss/object/project/_plan.scss
+++ b/MusicSchool/_assets/scss/object/project/_plan.scss
@@ -147,6 +147,7 @@
                     border: {
                         top: 0.5px solid #000;
                         bottom: 0.5px solid #000;
+                        left: 0.5px solid #000;
                     }
                 }
             }
