fix pagination active

--- a/MusicSchool/_assets/scss/object/project/_blog.scss
+++ b/MusicSchool/_assets/scss/object/project/_blog.scss
@@ -196,6 +196,10 @@
             background-color: #000;
             color: #fff;
         }
+        &.active{
+            background-color: #000;
+            color: #fff;
+        }
     }
     &__ellipsis{
         padding: {
