--- a/MusicSchool/_assets/scss/object/project/_result.scss
+++ b/MusicSchool/_assets/scss/object/project/_result.scss
@@ -125,6 +125,10 @@
             background-color: #000;
             color: #fff;
         }
+        &.active{
+            background-color: #000;
+            color: #fff;
+        }
     }
     &__ellipsis{
         padding: {
