--- a/MusicSchool/_assets/scss/object/project/_search.scss
+++ b/MusicSchool/_assets/scss/object/project/_search.scss
@@ -104,6 +104,10 @@
             background-color: #000;
             color: #fff;
         }
+        &.active{
+            background-color: #000;
+            color: #fff;
+        }
     }
     &__ellipsis{
         padding: {
