update notice-list, single-notice

--- a/musicschool-theme-practice/_assets/scss/object/project/_notice-list.scss
+++ b/musicschool-theme-practice/_assets/scss/object/project/_notice-list.scss
@@ -4,6 +4,9 @@
     background-position: left;
 }
 .notice-list {
+    ul{
+        border-top: 0.5px solid #000;
+    }
     &__item {
         align-items: center;
         border-bottom: 0.5px solid #000;
