--- a/musicschool-theme-practice/_assets/scss/object/project/_contact-form.scss
+++ b/musicschool-theme-practice/_assets/scss/object/project/_contact-form.scss
@@ -17,11 +17,11 @@
     &__label {
         font-size: 2rem;
         margin-top: 10px;
+        width: 20%;
     }
     &__input {
         height: 40px;
         border: 0.5px solid #000;
-        width: 80%;
         max-width: 711px;
         font-size: 15px;
         padding: 0 20px;
@@ -34,46 +34,86 @@
         width: 80%;
         max-width: 711px;
     }
-    &-check-area__item {
+    .wpcf7-list-item {
         display: block;
         font-size: 1.8rem;
         margin-bottom: 20px;
-        cursor: pointer;
         padding: 0 40px;
+        margin-left: 0;
         position: relative;
-        &--bottom {
+        &.last{
             margin-bottom: 0;
         }
-        &::before {
-            content: '';
-            background: #fff;
-            border: 1px solid #231815;
-            display: block;
-            width: 20px;
-            height: 20px;
-            left: 0;
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-        }
-        &::after {
-            content: '';
-            border-right: 3px solid $red;
-            border-bottom: 3px solid $red;
-            display: block;
-            height: 12px;
-            left: 7px;
-            margin-top: -9px;
-            opacity: 0;
-            position: absolute;
-            top: 50%;
-            transform: rotate(45deg);
-            width: 5px;
+        label {
+            cursor: pointer;
+            &::before {
+                content: '';
+                background: #fff;
+                border: 1px solid #231815;
+                display: block;
+                width: 20px;
+                height: 20px;
+                left: 0;
+                position: absolute;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+            &::after {
+                content: '';
+                border-right: 3px solid $red;
+                border-bottom: 3px solid $red;
+                display: block;
+                height: 12px;
+                left: 7px;
+                margin-top: -9px;
+                opacity: 0;
+                position: absolute;
+                top: 50%;
+                transform: rotate(45deg);
+                width: 5px;
+            }
+            &.checked::after{
+                opacity: 1;
+            }
         }
     }
     &__textarea {
         height: 300px;
         padding: 20px;
+    }
+    .wpcf7-form-control-wrap{
+        width: 80%;
+        text-align: right;
+        .wpcf7-form-control{
+            width: 80%;
+            display: block;
+            margin-left: auto;
+            .wpcf7-list-item {
+                text-align: left;
+                input {
+                    opacity: 0;
+                    position: absolute;
+                }
+            }
+        }
+    }
+    .wpcf7-spinner{
+        width: 0;
+        margin: 0;
+    }
+    // バリデーションチェックメッセージ
+    .wpcf7-not-valid-tip{
+        width: 80%;
+        margin-left: auto;
+        padding-top: 6px;
+        text-align: left;
+        color: $red;
+    }
+    .wpcf7 form.invalid .wpcf7-response-output {
+        border: none;
+        font-size: 1.8rem;
+        text-align: center;
+        color: $red;
     }
 }
 .content-area--contact-form {
