--- a/musicschool-theme-practice/_assets/scss/layout/_header.scss
+++ b/musicschool-theme-practice/_assets/scss/layout/_header.scss
@@ -20,11 +20,9 @@
             height: 80px;
             list-style: none;
             align-items: center;
-            &__item {
+            .menu-item {
                 margin-right: 33px;
-                a:not(.c-button--head) {
-                    display: block;
-                    line-height: 80px;
+                &:not(.c-button--head) a {
                     color: #000;
                     text-decoration: none;
                     font-size: 1.7rem;
@@ -41,6 +39,10 @@
                         height: 1px;
                         background: #000;
                     }
+                }
+                &.c-button a{
+                    color: #fff;
+                    text-decoration: none;
                 }
             }
         }
@@ -81,7 +83,7 @@
             &-list {
                 display: block;
                 height: auto;
-                &__item {
+                .menu-item {
                     margin-right: 0;
                     a:not(.c-button--head) {
                         background: $red;
@@ -93,9 +95,8 @@
                         &:hover {
                             opacity: 1;
                             background: #000;
-                            padding-bottom: 20px;
                             &::after {
-                                display: none;
+                                content: none;
                             }
                         }
                     }
