--- a/musicschool-theme-practice/_assets/scss/object/project/_search.scss
+++ b/musicschool-theme-practice/_assets/scss/object/project/_search.scss
@@ -3,3 +3,8 @@
         padding: 40px 0 50px;
     }
 }
+.search-error-text{
+    font-size: 1.8rem;
+    text-align: center;
+    margin-bottom: 60px;
+}
