--- a/MusicSchool/_assets/scss/object/component/_button.scss
+++ b/MusicSchool/_assets/scss/object/component/_button.scss
@@ -10,8 +10,8 @@
   color: #fff;
   transition: .5s;
   &:hover{
-    background-color: #fff;
-    color: v.$red;
+    box-shadow: 0 15px 30px -5px rgba(0,0,0,0.5),0 0 5px rgba(0,0,0,0.2);
+    transform: translateY(-4px);
   }
 }
 .c-button--small{
